# ResumeParsePro

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml  retry_failed_parses.py  test_api_key.py  test_output.txt  test_result.txt
accounts/: models.py  serializers.py  urls.py  views.py
candidates/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
candidates/migrations/: 0001_initial.py  0002_candidateeditlog_candidate_updated_at_and_more.py
candidates/tests/: test_audit_export.py
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
core/: pagination.py  responses.py
docs/: CELERY_RESTART_GUIDE.md  CHANGELOG.md
docs/dfd/: README.md
resumes/: admin.py  extraction.py  models.py  pipeline.py  requirements_helpers.py  schema.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
resumes/migrations/: 0001_initial.py  0002_add_file_hash_and_size.py  0003_rename_resumes_res_uploade_idx_resumes_res_uploade_437460_idx_and_more.py  0004_parserunstatuslog_parserun_progress_stage_and_more.py  0005_alter_parserun_status.py
resumes/tests/: test_persist_string_shapes.py  test_pipeline_schema.py  test_upload_idempotency_and_ownership.py  test_utils.py
scripts/: check_runs.py  generate_db_schema_pdf.py  start-parsepro.ps1  status-parsepro.ps1  stop-parsepro.ps1  test_reqs.py
static/css/: app.css
static/js/: app.js  auth.js  pages.js
templates/: base.html  landing.html  page.html
templates/auth/: forgot-password.html  login.html  logout.html  register.html  (+1 more)
ui/: apps.py  urls.py  views.py
(+1 files in other folders)
